[package]
name = "relay-manager"
version = "0.1.0"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Relay management command line tool"
repository = "https://github.com/mikedilger/relay-manager"
keywords = [ "nostr" ]
license = "MIT"
default-run = "relay-manager"

[dependencies]
base64 = "0.22"
bitcoin_hashes = "0.14"
dirs = "5.0"
hex = "0.4"
http = "1.1"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", branch = "master" }
reqwest = { version = "0.12", features = [ "blocking", "rustls-tls-native-roots" ] }
rpassword = "7.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zeroize = "1.5"
